--- a/styleC-2.css
+++ b/styleC-2.css
@@ -23,8 +23,6 @@
 }
 #main {
   width: 80%;
-  height: 650px;
-  background-color: #e3e3e3;
 }
 #slider {
   width: 100%;
@@ -48,7 +46,7 @@
 #contents .content3 {
   width: 33.3333%;
   height: 200px;
-  background-color: #d9d9d9;
+  background-color: #a3a3a3;
 }
 #footer {
   width: 100%;
@@ -62,13 +60,13 @@
 #footer .footer2 {
   width: 20%;
 }
-#footer .footer2 .footer2-1 {
+#footer .footer2-1 {
+  width: 100%;
+  height: 50px;
+  background-color: #9d9d9d;
+}
+#footer .footer2-2 {
   width: 100%;
   height: 50px;
   background-color: #929292;
-}
-#footer .footer2 .footer2-2 {
-  width: 100%;
-  height: 50px;
-  background-color: #a3a3a3;
 }
