--- a/Canvas.css
+++ b/Canvas.css
@@ -29,7 +29,7 @@ a {
 .content {
   width: 35%;
   height: 100%;
-  background-color: #f5f5f5;
+  background-color: #fff;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -41,11 +41,16 @@ a {
   align-items: end;
 }
 .logo {
+  position: relative;
+  overflow: hidden;
   width: 200px;
-  line-height: 50px;
-  text-align: center;
-  font-weight: 600;
-  /* background-color: #fff; */
+  height: 50px;
+  /* background-color: #737373; */
+}
+.logo > img {
+  position: absolute;
+  top: -5px;
+  width: 100%;
 }
 .nav {
   width: 400px;
@@ -65,6 +70,10 @@ a {
   font-size: 120%;
 }
 
+.nav > ul > li:hover {
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 .contbox {
   position: relative;
   top: 60px;
@@ -77,7 +86,7 @@ a {
 
 .contbox > h1 {
   position: relative;
-  font-size: 600%;
+  font-size: 400%;
   font-weight: 1000;
 }
 
@@ -85,7 +94,7 @@ a {
   position: absolute;
   left: 3px;
   top: -20px;
-  content: 'Namaste';
+  content: 'Innovation';
   font-size: 20px;
   font-weight: 400;
   color: #737373;
@@ -98,42 +107,112 @@ a {
   left: 70px;
 }
 
+.icon > button {
+  width: 60px;
+  line-height: 30px;
+  text-align: center;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  background-color: #354188;
+  color: white;
+  cursor: pointer;
+}
+
+.icon > button:hover {
+  background-color: #3d498d;
+}
+
 .slider {
   position: relative;
-  width: 65%;
+  width: 1170px;
   height: 100%;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   overflow: hidden;
 }
 
-.slider > img {
-  position: absolute;
-  width: 100%;
-  height: 110%;
+.slide{
+  position: relative;
+  width: 4680px;
+  height: 850px;
+  display: flex;
+  animation: slide infinite linear 10s;
 }
+
+.slide div{
+  width: 1170px;
+  height: 850px;
+}
+
+.slide div img {
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes slide{
+  0%{
+      left: 0;
+  }
+
+  23%{
+      left: 0;
+  }
+
+  33%{
+      left: -1170px;
+  }
+
+  56%{
+      left: -1170px;
+  }
+
+  66%{
+      left: -2340px;
+  }
+
+  90%{
+      left: -2340px;
+  }
+
+  100%{
+
+      left: -3510px;
+  }
+}
+
 .img-text {
   position: absolute;
   bottom: 0;
   width: 50%;
   height: 50%;
   display: flex;
-  align-items: end;
+  align-items: center;
   background-color: #000;
+  opacity: 0.5;
+  border-top-right-radius: 10px;
+  cursor: pointer;
+  transition: all 0.4s;
 }
+
+.img-text:hover {
+  opacity: 1;
+}
+
 .img-text p {
   font-size: 350%;
-  padding: 0 0 4dvb 4dvb;
+  padding: 0 0 0 30px;
 }
+
 .img-text p::before {
   position: absolute;
   top: 0;
   left: 5px;
-  width: 40%;
+  width: 50%;
   line-height: 100px;
   text-align: center;
   /* background-color: #afafaf; */
-  content: 'BOOK YOUR STAY';
+  content: 'LOOKING TO THE FUTURE';
   font-size: 20px;
   color: #b8b8b8;
 }
