--- a/skills baseball park.css
+++ b/skills baseball park.css
@@ -15,100 +15,189 @@ a {
 
 #wrap {
   width: 100%;
-  height: 1000px;
+  height: 1380px;
   background-color: #f5f5f5;
   display: flex;
   justify-content: center;
 }
 
-.main {
+.back {
   width: 1920px;
-  height: 1000px;
-}
-
-.img {
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
-
-.img > img {
-  width: 1920px;
-  height: 1000px;
-}
-
-.header {
-  position: absolute;
-  width: 1920px;
-  height: 80px;
-  background-color: black;
-  display: flex;
-}
-
-.logo {
-  width: 320px;
-  line-height: 80px;
-  text-align: center;
-  /* background-color: lightseagreen; */
-}
-
-.nav {
-  width: 1280px;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* background-color: lightcoral; */
-}
-
-.nav > ul {
-  width: 490px;
-  /* background-color: gray; */
-  display: flex;
-}
-.nav > ul > li {
-  width: 120px;
-  text-align: center;
-  line-height: 35px;
-}
-
-.nav > ul > li:nth-of-type(4) {
-  width: 130px;
+  height: 1380px;
   /* background-color: #afafaf; */
 }
 
-.nav > ul > li > a {
-  color: #afafaf;
-}
-
-.nav > ul > li > a:hover {
-  color: #e4e4e4;
-}
-
-.login {
-  width: 320px;
-  height: 80px;
+.header {
+  position: fixed;
+  /* top: 0; */
+  height: 120px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  /* background-color: lightblue; */
+  background-color: black;
+  z-index: 2;
+  /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
-.login > a button {
-  width: 120px;
+.logo {
+  width: 400px;
   text-align: center;
-  line-height: 35px;
-  border: 1px solid white;
-  border-radius: 9px;
-  background-color: black;
-  color: white;
-  font-size: 17px;
+  line-height: 120px;
+  font-size: 30px;
+  font-weight: 1000;
+  color: aliceblue;
+}
+
+.nav {
+  width: 1120px;
+  height: 120px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.nav > ul {
+  width: 600px;
+  /* background-color: gray; */
+  height: 40px;
+  display: flex;
+}
+
+.nav > ul > li {
+  width: 150px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 23px;
   cursor: pointer;
 }
 
-.login > a button:hover {
-  background-color: rgb(29, 29, 29);
-  transition: 0.3s;
-  transform: scale(1.1);
+.nav > ul > li > a {
+  position: relative;
+  color: #d3d3d3;
+}
+
+.nav > ul > li > a:hover {
+  color: rgba(243, 115, 33);
+  transition: 0.5s;
+}
+
+.nav > ul > li > a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  top: 73px;
+  height: 3px;
+  left: 0;
+  background-color: rgba(243, 115, 33);
+  transform-origin: left;
+  transition: transform 0.35s ease-out;
+}
+
+.nav > ul > li > a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.login {
+  width: 400px;
+  height: 120px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.login button {
+  width: 90px;
+  text-align: center;
+  line-height: 35px;
+  border: none;
+  font-size: 20px;
+  background-color: inherit;
+  cursor: pointer;
+}
+
+.login button:last-child {
+  margin-right: 20px;
+}
+
+.login button > a {
+  color: #d3d3d3;
+}
+
+.login button > a:hover {
+  color: white;
+}
+
+.main {
+  margin-top: 120px;
+  width: 100%;
+  height: 1160px;
+  overflow: hidden;
+}
+
+.slide {
+  position: relative;
+  width: 400%;
+  height: 1160px;
+  display: flex;
+  animation: slide infinite linear 10s;
+}
+
+.slide div {
+  width: 100%;
+  height: 1160px;
+}
+
+@keyframes slide {
+  0% {
+    left: 0;
+  }
+  
+  23% {
+    left: 0;
+  }
+
+  33% {
+    left: -100%;
+  }
+
+  56% {
+    left: -100%;
+  }
+
+  66% {
+    left: -200%;
+  }
+
+  90% {
+    left: -200%;
+  }
+
+  100% {
+    left: -300%;
+  }
+}
+
+.main > img {
+  width: 100%;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+}
+
+.footer1 {
+  width: 20%;
+  height: 100px;
+  background-color: lightblue;
+}
+.footer2 {
+  width: 60%;
+  height: 100px;
+  background-color: lightcoral;
+}
+.footer3 {
+  width: 20%;
+  height: 100px;
+  background-color: lightgreen;
 }
