chore : Add images

--- a/skills baseball park.css
+++ b/skills baseball park.css
@@ -151,29 +151,29 @@ a {
   0% {
     left: 0;
   }
-  
-  23% {
+  20% {
     left: 0;
   }
-
-  33% {
+  25% {
     left: -100%;
   }
-
-  56% {
+  45% {
     left: -100%;
   }
-
-  66% {
+  50% {
     left: -200%;
   }
-
-  90% {
+  70% {
     left: -200%;
   }
-
-  100% {
+  75% {
     left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
   }
 }
 
