chore : Add text

--- a/skills baseball park.css
+++ b/skills baseball park.css
@@ -136,44 +136,124 @@ a {
 
 .slide {
   position: relative;
-  width: 400%;
+  width: 500%;
   height: 1160px;
   display: flex;
-  animation: slide infinite linear 10s;
+  animation: slide infinite linear 13s;
 }
 
-.slide div {
+.slide > div {
+  position: relative;
   width: 100%;
   height: 1160px;
+}
+
+.slide > div::before {
+  content: "";
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+}
+
+.txt1 {
+  position: absolute;
+  top: 450px;
+  left: 60px;
+  color: white;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  opacity: 0.7;
+}
+
+.txt1:hover {
+  opacity: 1;
+  color: aliceblue;
+  transition: 0.3s;
+}
+
+.txt1 > h1 {
+  text-align: center;
+  line-height: 110px;
+  font-size: 90px;
+  /* background-color: gray; */
+}
+
+.txt1 > h2 {
+  text-align: left;
+  line-height: 110px;
+  font-size: 60px;
+  /* background-color: gray; */
+}
+
+.txt2 {
+  position: absolute;
+  top: 450px;
+  left: 260px;
+  width: 1400px;
+  color: aliceblue;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  opacity: 0.8;
+  z-index: 3;
+}
+
+.txt2:hover {
+  transition: 0.3s;
+  transform: scale(1.1);
+}
+
+.txt2 > h1 {
+  text-align: center;
+  line-height: 110px;
+  font-size: 60px;
+  /* background-color: gray; */
+}
+
+.txt3 {
+  position: absolute;
+  top: 450px;
+  left: 0;
+  width: 1400px;
+  color: aliceblue;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.txt3 > h1 {
+  text-align: center;
+  line-height: 110px;
+  font-size: 50px;
+  /* background-color: gray; */
 }
 
 @keyframes slide {
   0% {
     left: 0;
   }
-  
-  23% {
+  20% {
     left: 0;
   }
-
-  33% {
+  25% {
     left: -100%;
   }
-
-  56% {
+  45% {
     left: -100%;
   }
-
-  66% {
+  50% {
     left: -200%;
   }
-
-  90% {
+  70% {
     left: -200%;
   }
-
-  100% {
+  75% {
     left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
   }
 }
 
