--- a/skills baseball park.css
+++ b/skills baseball park.css
@@ -301,9 +301,78 @@ a {
 }
 
 .contents {
-  width: 100%;
+  width: 1920px;
   height: 600px;
-  background-color: black;
+  background-color: rgb(29, 29, 29);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cont {
+  width: 1500px;
+  height: 400px;
+  display: flex;
+}
+
+.cont1 {
+  width: 700px;
+  height: 400px;
+  background-color: lightblue;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(107, 107, 107, 0.4);
+}
+
+.cont1 > div {
+  position: relative;
+  background-size: cover;
+  background-color: rgb(29, 29, 29);
+  transition: background-color 0.5s;
+  text-align: center;
+  line-height: 400px;
+  font-size: 20px;
+}
+
+.cont1 > div > img {
+  width: 100%;
+  height: 400px;
+}
+
+.cont1 > div::before {
+  content: "SKILLS BASEBALL PARK";
+  color: white;
+  opacity: 0.0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(29, 29, 29);
+  transition: opacity 0.5s;
+}
+
+.cont1 > div:hover::before {
+  opacity: 0.8;
+}
+
+.cont2 {
+  position: relative;
+  margin-left: 40px;
+  width: 800px;
+  height: 100%;
+}
+
+.cont2 > strong {
+  position: absolute;
+  top: 120px;
+  font-size: 30px;
+}
+
+.cont2 > h4 {
+  position: absolute;
+  top: 210px;
+  font-weight: 200;
 }
 
 .footer {
