--- a/Skills baseball park/skills baseball park.css
+++ b/Skills baseball park/skills baseball park.css
@@ -375,6 +375,140 @@ a {
   font-weight: 200;
 }
 
+.calendar {
+  width: 100%;
+  height: 1300px;
+}
+
+.daily {
+  width: 100%;
+  line-height: 200px;
+  background-color: rgb(44, 44, 44);
+}
+
+.daily > h1 {
+  text-align: center;
+  line-height: 100px;
+  font-size: 60px;
+}
+
+.daily > p {
+  text-align: center;
+  border-radius: 20px;
+  line-height: 70px;
+  font-size: 40px;
+  background-color: rgba(243, 115, 33, 0.5);
+}
+
+.cale {
+  width: 100%;
+  height: 1100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(29, 29, 29);
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td {
+  border: 2px solid gray;
+  font-size: 30px;
+  padding: 3px;
+  width: 200px;
+  height: 200px;
+  vertical-align: top;
+  color: white;
+  background-color: rgb(29, 29, 29);
+}
+
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+
+.back1 {
+  display: block;
+  position: absolute;
+}
+
+.button {
+  cursor: pointer;
+  padding-right: 160px;
+  padding-bottom: 153px;
+  /* background-color: aqua; */
+}
+
+.box {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  visibility: collapse;
+  transition: all 0.3s ease;
+  transform: scale(0);
+}
+
+.modalb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -250px;
+  width: 500px;
+  height: 300px;
+  background-color: rgb(251, 253, 255);
+  /* box-shadow: 0 0 3px rgba(255, 255, 255, 0.7); */
+  border-radius: 9px;
+  overflow: hidden;
+  color: black;
+}
+
+.closer {
+  position: absolute;
+  width: 80px;
+  height: 30px;
+  top: 0;
+  right: 0;
+  background-color: #575757;
+  color: white;
+  border: none;
+  border-bottom-left-radius: 9px;
+  text-align: center;
+  line-height: 26px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.text {
+  display: inline-block;
+  width: 100%;
+}
+
+.text h3 {
+  text-align: center;
+  line-height: 300px;
+  font-size: 25px;
+}
+
+input#modal[type=checkbox]:checked ~ .box {
+  visibility: visible;
+  transform: scale(1);
+}
+
+th {
+  background-color: rgb(29, 29, 29);
+  border: 2px solid gray;
+  font-size: 30px;
+  font-weight: bold;
+  height: 50px;
+}
+
 .footer {
   width: 100%;
   height: 100px;
