--- a/Skills baseball park/webdesign.css
+++ b/Skills baseball park/webdesign.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Century Gothic, sans-serif;
 }
 
 li {
@@ -54,11 +54,13 @@ a {
     display: flex;
     width: 400px;
 }
+
 .nav > ul > li {
     width: 100px;
     text-align: center;
     line-height: 40px;
 }
+
 .nav > ul > li > a {
     position: relative;
     cursor: pointer;
@@ -91,7 +93,6 @@ a {
 .login {
     width: 300px;
     height: 70px;
-    /* background-color: lightcyan; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -206,7 +207,6 @@ a {
 .tt3 > h2 {
     margin-left: 20px;
     font-size: 40px;
-    font-family: Century Gothic, sans-serif;
     font-weight: 700;
     line-height: 50px;
     text-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
@@ -281,18 +281,42 @@ a {
     width: 1120px;
     height: 400px;
     display: flex;
+    cursor: default;
 }
 
 .cont1 {
+    width: 500px;
+    height: 400px;
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
 
 .cont1 > div {
     position: relative;
     width: 500px;
     height: 400px;
+    text-align: center;
+    line-height: 400px;
+    font-size: 20px;
+    font-family: Century Gothic, sans-serif;
+}
+
+.cont1 > div::before {
+    content: "Skills baseball park";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    color: white;
+    opacity: 0;
+}
+
+.cont1 > div:hover::before {
+    transition: 0.5s;
+    opacity: 0.8;
 }
 
 .cont1 > div > img {
@@ -302,23 +326,235 @@ a {
 
 .cont2 {
     position: relative;
-    padding-left: 40px;
+    padding-left: 20px;
     width: 620px;
     height: 400px;
-    background-color: rgb(40, 40, 40);
     color: white;
 }
 
-.cont2 strong {
+.cont2 > strong {
     position: absolute;
     top: 120px;
     font-size: 25px;
 }
 
-.cont2 h5 {
+.cont2 > h4 {
     position: absolute;
-    top: 200px;
+    top: 210px;
     font-weight: 200;
+}
+
+.btn {
+    position: absolute;
+    top: 280px;
+    left: 20px;
+}
+
+.btn button {
+    width: 120px;
+    text-align: center;
+    line-height: 35px;
+    border: 1px solid #d3d3d3;
+    border-radius: 9px;
+    background-color: rgb(40, 40, 40);
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.btn button:hover {
+    border-color: rgb(243, 115, 33);
+}
+
+.btn button > a {
+    color: white;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.btn button::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    z-index: -1;
+    background-color: rgb(243, 115, 33);
+    transition: all 0.3s ease;
+}
+
+.btn button:hover::after {
+    left: 0;
+    width: 100%;
+}
+
+.calendar {
+    width: 1320px;
+    height: 800px;
+}
+
+.daily {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    background-color: rgb(38, 107, 128);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.daily > h1 {
+    width: 200px;
+    text-align: center;
+}
+
+.gamst {
+    position: absolute;
+    top: 50px;
+    right: 40px;
+    width: 300px;
+    border: none;
+    border-radius: 20px;
+    background-color: rgba(243, 115, 33, 0.5);
+    cursor: default;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.gsl {
+    position: relative;
+    width: 1200px;
+    height: 35px;
+    display: flex;
+    animation: gsl infinite linear 6s;
+}
+
+.gsl > div {
+    width: 300px;
+    text-align: center;
+    line-height: 35px;
+}
+
+@keyframes gsl {
+    0% {
+        left: 0;
+    }
+    100% {
+        left: -100%;
+    }
+}
+
+.gamst:hover {
+    background-color: rgb(194, 105, 49);
+}
+
+.cale {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(40, 40, 40);
+}
+
+table {
+    border-collapse: collapse;
+    color: white;
+}
+
+th {
+    border: 2px solid white;
+    font-size: 25px;
+    font-weight: bold;
+    height: 50px;
+}
+
+td {
+    border: 2px solid white;
+    font-size: 25px;
+    padding: 3px;
+    width: 100px;
+    height: 100px;
+    vertical-align: top;
+}
+
+.mbt {
+    display: block;
+}
+
+.button {
+    cursor: pointer;
+    padding-right: 80px;
+    padding-bottom: 65px;
+}
+
+.hidden {
+    display: none;
+    visibility: hidden;
+}
+
+.molab {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    visibility: collapse;
+    transform: scale(0);
+    transition: all 0.2s ease-out;
+    z-index: 2;
+}
+
+.mob {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 50%;
+    width: 300px;
+    height: 140px;
+    margin-left: -150px;
+    margin-top: -70px;
+    background-color: white;
+    border-radius: 9px;
+    overflow: hidden;
+}
+
+.closer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 80px;
+    text-align: center;
+    line-height: 26px;
+    font-size: 14px;
+    border: none;
+    border-bottom-left-radius: 5px;
+    background-color: black;
+    cursor: pointer;
+}
+
+.mmt {
+    display: inline-block;
+    width: 100%;
+    color: black;
+}
+
+.mmt > h3 {
+    text-align: center;
+    line-height: 140px;
+    font-size: 20px;
+}
+
+input#modal[type=checkbox]:checked ~ .molab {
+    visibility: visible;
+    transform: scale(1);
 }
 
 .footer {
@@ -336,7 +572,6 @@ a {
     height: 170px;
     color: #d3d3d3;
     cursor: default;
-    /* background-color: gray; */
 }
 
 .footb > h1 {
