--- a/Skills baseball park/webdesign.css
+++ b/Skills baseball park/webdesign.css
@@ -393,12 +393,13 @@ a {
 .calendar {
     width: 1320px;
     height: 800px;
+    cursor: default;
 }
 
 .daily {
     position: relative;
     width: 100%;
-    height: 100px;
+    height: 70px;
     background-color: rgb(38, 107, 128);
     color: white;
     display: flex;
@@ -413,12 +414,13 @@ a {
 
 .gamst {
     position: absolute;
-    top: 50px;
-    right: 40px;
+    top: 100px;
+    right: 510px;
     width: 300px;
     border: none;
     border-radius: 20px;
-    background-color: rgba(243, 115, 33, 0.5);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    background-color: rgb(199, 92, 26);
     cursor: default;
     display: flex;
     justify-content: center;
@@ -450,12 +452,13 @@ a {
 }
 
 .gamst:hover {
-    background-color: rgb(194, 105, 49);
+    transform: scale(1.1);
+    transition: 0.3s;
 }
 
 .cale {
     width: 100%;
-    height: 700px;
+    height: 730px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -489,8 +492,8 @@ td {
 
 .button {
     cursor: pointer;
-    padding-right: 80px;
-    padding-bottom: 65px;
+    padding-right: 70px;
+    padding-bottom: 63px;
 }
 
 .hidden {
