--- a/Ranking/rk.css
+++ b/Ranking/rk.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
 }
 
 .wrap {
@@ -12,90 +11,150 @@
 }
 
 .rb {
-    width: 600px;
+    width: 1200px;
     height: 600px;
-    background-color: #afafaf;
+    background-color: rgb(40, 40, 40);
 }
 
 .head {
-    width: 600px;
+    width: 1200px;
     text-align: center;
     line-height: 70px;
     display: flex;
 }
 
 .head1 {
-    width: 200px;
-    background-color: lightblue;
-}
-.head2 {
-    width: 200px;
-    background-color: lightcoral;
-}
-.head3 {
-    width: 200px;
-    background-color: lightpink;
+    width: 400px;
+    background-color: aliceblue;
 }
 
-.hidden {
-    display: none;
-    visibility: collapse;
+.head2 {
+    width: 400px;
+    background-color: aqua;
+}
+
+.head3 {
+    width: 400px;
+    background-color: bisque;
 }
 
 .btn {
+    font-size: 19px;
+    font-weight: 700;
     cursor: pointer;
 }
 
-.sb {
-    width: 600px;
-    height: 530px;
+.select {
+    width: 1200px;
+    text-align: center;
+    line-height: 70px;
     display: flex;
     overflow: hidden;
     visibility: hidden;
 }
 
-.sb1 {
-    width: 300px;
+.hidden {
+    visibility: collapse;
+    display: none;
 }
 
-.sb11 {
-    width: 300px;
-    height: 50px;
-    background-color: black;
-}
-
-.sb2 {
-    width: 300px;
-}
-
-.sb22 {
-    width: 300px;
-    height: 50px;
+.select1 {
+    width: 400px;
     background-color: gray;
 }
 
-.cont {
-    width: 300px;
-    height: 480px;
-    background-color: lemonchiffon;
+.select2 {
+    width: 400px;
+    background-color: rgb(179, 54, 54);
+}
+
+.select3 {
+    width: 400px;
+    background-color: rgb(144, 81, 202);
+}
+
+.content {
+    width: 1200px;
+    height: 460px;
+    background-color: #d4d4d4;
+    display: flex;
+}
+
+.content1 {
+    width: 400px;
+    height: 460px;
+    display: flex;
     overflow: hidden;
     visibility: hidden;
 }
 
-.cont2 {
-    width: 300px;
-    height: 480px;
-    background-color: blue;
+.content1-1 {
+    width: 200px;
+    height: 460px;
+    background-color: aqua;
+}
+
+.content1-2 {
+    width: 200px;
+    height: 460px;
+    background-color: aquamarine;
+}
+
+.content2 {
+    width: 400px;
+    height: 460px;
+    display: flex;
     overflow: hidden;
     visibility: hidden;
 }
 
-input#modal:checked ~ .sb,
-input#week:checked ~ .sb {
+.content2-1 {
+    width: 200px;
+    height: 460px;
+    background-color: #f5f5f5;
+}
+.content2-2 {
+    width: 200px;
+    height: 460px;
+    background-color: #919191;
+}
+
+.content3 {
+    width: 400px;
+    height: 460px;
+    display: flex;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.content3-1 {
+    width: 200px;
+    height: 460px;
+    background-color: lightsalmon;
+}
+.content3-2 {
+    width: 200px;
+    height: 460px;
+    background-color: lightpink;
+}
+
+
+
+
+
+
+
+input#night:checked ~ .select1,
+input#week:checked ~ .select2,
+input#dawn:checked ~ .select3 {
     visibility: visible;
 }
 
-input#acc:checked ~ .cont,
-input#akk:checked ~ .cont2 {
+input#pitch:checked ~ .content1-1,
+input#hitter:checked ~ .content1-2,
+input#pitch2:checked ~ .content2-1,
+input#hitter2:checked ~ .content2-2,
+input#pitch3:checked ~ .content3-1,
+input#hitter3:checked ~ .content3-2 {
     visibility: visible;
 }
