--- a/Skills baseball park/webdesign.css
+++ b/Skills baseball park/webdesign.css
@@ -76,7 +76,7 @@ a {
     content: "";
     width: 100%;
     height: 4px;
-    top: 40px;
+    top: 41px;
     left: 0;
     transform: scaleX(0);
     transform-origin: left;
@@ -268,7 +268,7 @@ a {
     }
 }
 
-.content {
+.section {
     width: 1320px;
     height: 600px;
     background-color: rgb(40, 40, 40);
@@ -558,6 +558,267 @@ td {
 input#modal[type=checkbox]:checked ~ .molab {
     visibility: visible;
     transform: scale(1);
+}
+
+.ranb{
+    width: 1320px;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(40, 40, 40);
+}
+
+.ranm {
+    width: 1200px;
+    height: 600px;
+    display: flex;
+}
+
+.rb {
+    width: 600px;
+    height: 600px;
+    background-color: aliceblue;
+}
+
+.ranh {
+    width: 600px;
+    text-align: center;
+    line-height: 70px;
+    display: flex;
+    background-color: rgb(42, 152, 185);
+    color: white;
+}
+
+.ranh1 {
+    width: 200px;
+}
+
+.ranh2 {
+    width: 200px;
+}
+
+.ranh3 {
+    width: 200px;
+}
+
+.rbtn {
+    font-size: 17px;
+    font-weight: 700;
+    cursor: pointer;
+    padding: 5px 15px;
+    border: 2px solid white;
+    border-radius: 20px;
+    color: white;
+}
+
+.rbtn:hover {
+    background-color: rgb(40, 40, 40);
+    border-color: rgb(241, 104, 19);
+}
+
+.select {
+    width: 600px;
+    height: 50px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.sbn {
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+    padding: 3px 20px;
+    border: 2px solid gray;
+    border-radius: 20px;
+}
+
+.select1 {
+    width: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.select1-1 {
+    width: 80px;
+    /* background-color: gray; */
+}
+.select1-2 {
+    width: 80px;
+    /* background-color: palegoldenrod; */
+}
+
+.select2 {
+    width: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.select2-1 {
+    width: 80px;
+    /* background-color: rgb(179, 54, 54); */
+}
+.select2-2 {
+    width: 80px;
+    /* background-color: palevioletred; */
+}
+
+.select3 {
+    width: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.select3-1 {
+    width: 80px;
+    /* background-color: rgb(144, 81, 202); */
+}
+
+.select3-2 {
+    width: 80px;
+    /* background-color: darkcyan; */
+}
+
+.content {
+    width: 600px;
+    height: 480px;
+    background-color: aliceblue;
+    /* border-top: 1px solid gray; */
+    display: flex;
+}
+
+.content p {
+    border-top: 1px solid gray;
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 65px;
+}
+
+.content i {
+    color: rgb(255, 98, 0);
+}
+
+.content1 {
+    width: 200px;
+    height: 460px;
+    display: flex;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.content1-1 {
+    width: 100px;
+    height: 460px;
+    /* background-color: aqua; */
+}
+
+.content1-2 {
+    width: 100px;
+    height: 460px;
+    /* background-color: aquamarine; */
+}
+
+.content2 {
+    width: 200px;
+    height: 460px;
+    display: flex;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.content2-1 {
+    width: 100px;
+    height: 460px;
+    /* background-color: #f5f5f5; */
+}
+.content2-2 {
+    width: 100px;
+    height: 460px;
+    /* background-color: #919191; */
+}
+
+.content3 {
+    width: 200px;
+    height: 460px;
+    display: flex;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.content3-1 {
+    width: 100px;
+    height: 460px;
+    /* background-color: lightsalmon; */
+}
+.content3-2 {
+    width: 100px;
+    height: 460px;
+    /* background-color: lightpink; */
+}
+
+.tob {
+    width: 600px;
+    height: 600px;
+    background-color: aliceblue;
+}
+
+.accmenu {
+    width: 600px;
+    padding-left: 40px;
+    line-height: 70px;
+    background-color: rgb(42, 152, 185);
+}
+
+.listb {
+    width: 600px;
+    height: 0;
+    background-color: rgb(101, 175, 197);
+    overflow: hidden;
+    visibility: hidden;
+    transition: all 0.5s ease;
+}
+
+.listb p {
+    margin-top: 7px;
+    width: 600px;
+    line-height: 75px;
+    background-color: rgb(101, 175, 197);
+    padding-left: 20px;
+    font-size: 19px;
+    font-weight: 700;
+    border-bottom: 1px solid gray;
+}
+
+.listb i {
+    color: rgb(255, 98, 0);
+}
+
+
+
+
+input#night:checked ~ .select1,
+input#week:checked ~ .select2,
+input#dawn:checked ~ .select3 {
+    visibility: visible;
+}
+
+input#pitch:checked ~ .content1-1,
+input#hitter:checked ~ .content1-2,
+input#pitch2:checked ~ .content2-1,
+input#hitter2:checked ~ .content2-2,
+input#pitch3:checked ~ .content3-1,
+input#hitter3:checked ~ .content3-2 {
+    visibility: visible;
+}
+
+input#accordion:checked ~ .listb {
+    visibility: visible;
+    transition: all 0.5s ease;
+    height: 530px;
 }
 
 .footer {
