--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -1,1 +1,48 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+.wrap {
+    width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+}
+
+.gallb {
+    width: 1320px;
+    height: 800px;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+}
+
+.gallcont {
+    width: 1320px;
+    height: 500px;
+    background-color: lightblue;
+    display: flex;
+    justify-content: right;
+}
+
+.imgsd {
+    width: 792px;
+    height: 500px;
+    background-color: lightcoral;
+    display: flex;
+    align-items: center;
+}
+
+.imgsd > div {
+    margin-left: 264px;
+    width: 264px;
+    height: 300px;
+}
+
+.imgsd img {
+    width: 264px;
+    height: 300px;
+}
