--- a/Skills baseball park/final summary.css
+++ b/Skills baseball park/final summary.css
@@ -35,6 +35,7 @@ a {
     background-color: rgb(42, 152, 185);
     color: white;
     display: flex;
+    z-index: 1;
 }
 
 .logo {
@@ -186,7 +187,6 @@ a {
 .t4 {
     position: absolute;
     width: 540px;
-    height: 100px;
     top: 50%;
     left: 50%;
     margin-top: -50px;
@@ -224,4 +224,120 @@ a {
     100% {
         left: -400%;
     }
+}
+
+.info {
+    width: 1320px;
+    height: 600px;
+    background-color: rgb(40, 40, 40);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    width: 1120px;
+    height: 400px;
+    color: white;
+    display: flex;
+}
+
+.cont1 {
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.cont1 > div {
+    position: relative;
+    width: 540px;
+    height: 400px;
+    text-align: center;
+    line-height: 400px;
+    font-size: 19px;
+}
+
+.cont1 > div::before {
+    position: absolute;
+    content: "Skills baseball park";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    opacity: 0;
+}
+
+.cont1 > div:hover::before {
+    opacity: 0.8;
+    transition: 0.5s;
+}
+
+.cont1 > div > img {
+    width: 540px;
+    height: 400px;
+}
+
+.cont2 {
+    position: relative;
+    margin-left: 20px;
+    width: 560px;
+    height: 400px;
+}
+
+.cont2 > strong {
+    position: absolute;
+    top: 120px;
+    font-size: 25px;
+}
+
+.cont2 > h4 {
+    position: absolute;
+    top: 210px;
+    font-weight: 200;
+}
+
+.inbtn {
+    position: absolute;
+    top: 280px;
+}
+
+.inbtn button {
+    position: relative;
+    width: 120px;
+    text-align: center;
+    line-height: 35px;
+    border: 1px solid #d3d3d3;
+    border-radius: 9px;
+    background-color: rgb(40, 40, 40);
+    cursor: pointer;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.inbtn button:hover {
+    border-color: rgb(243, 115, 33);
+}
+
+.inbtn button > a {
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.inbtn button::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: rgb(243, 115, 33);
+    transition: all 0.3s ease;
+    z-index: -1;
+}
+
+.inbtn button:hover::after {
+    left: 0;
+    width: 100%;
 }
