chore : Change header color

--- a/Skills baseball park/webdesign.css
+++ b/Skills baseball park/webdesign.css
@@ -30,7 +30,7 @@ a {
     width: 1320px;
     display: flex;
     color: white;
-    background-color: rgb(42, 152, 185);
+    background-color: black;
     z-index: 2;
 }
 
